--- a/src/main/resources/fxml/juego.fxml
+++ b/src/main/resources/fxml/juego.fxml
@@ -1,15 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="762.0" prefWidth="1152.0" xmlns="http://javafx.com/fxml/1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
-   <children>
-      <GridPane fx:id="mapaGrid" alignment="CENTER_LEFT" prefHeight="762.0" prefWidth="1152.0" StackPane.alignment="CENTER">
+<SplitPane fx:id="divide" dividerPositions="0.5" prefHeight="762.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
+   <items>
+      <AnchorPane fx:id="mapa" prefHeight="762.0" prefWidth="800.0">
+         <children>
+            <StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="762.0" prefWidth="800.0">
+               <children>
+                  <GridPane fx:id="mapaGrid" alignment="CENTER_LEFT" prefHeight="762.0" prefWidth="800.0" StackPane.alignment="CENTER">
 
       </GridPane>
-       <GridPane fx:id="opcionesGrid" alignment="CENTER_LEFT" prefHeight="762.0" prefWidth="1152.0" StackPane.alignment="CENTER">
+                   <GridPane fx:id="opcionesGrid" alignment="CENTER_LEFT" prefHeight="762.0" prefWidth="800.0" StackPane.alignment="CENTER">
 
        </GridPane>
-   </children>
-</StackPane>
+               </children>
+            </StackPane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="datosJugador" prefHeight="762.0" prefWidth="352.0">
+         <children>
+            <SplitPane dividerPositions="0.8" orientation="VERTICAL" prefHeight="762.0" prefWidth="352.0">
+              <items>
+                  <SplitPane fx:id="pnlDatosJugador" orientation="VERTICAL" prefHeight="562.0" prefWidth="352.0" />
+                <AnchorPane fx:id="pnlBotonera" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="762.0">
+                     <children>
+                         <Button fx:id="btnTerminarTurno" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" style="-fx-background-radius: 10; -fx-background-color: rgb(255, 206, 91); -fx-padding: 20px 100px 18px 100px;" text="TerminarTurno" textAlignment="CENTER" textFill="WHITE">
+                             <font>
+                                 <Font name="System Bold" size="36.0" />
+                             </font>
+                         </Button>
+                     </children></AnchorPane>
+              </items>
+            </SplitPane>
+         </children>
+      </AnchorPane>
+   </items>
+</SplitPane>
