--- a/src/main/resources/fxml/juego.fxml
+++ b/src/main/resources/fxml/juego.fxml
@@ -3,27 +3,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane fx:id="divide" dividerPositions="0.6934369602763385" prefHeight="762.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
+<SplitPane fx:id="divide" dividerPositions="0.6934369602763385" prefHeight="762.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
    <items>
       <AnchorPane fx:id="mapa" prefHeight="762.0" prefWidth="800.0">
          <children>
             <StackPane fx:id="stackPane" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="762.0" prefWidth="800.0">
-               <children>
-                  <GridPane fx:id="mapaGrid" alignment="CENTER_LEFT" prefHeight="762.0" prefWidth="800.0" StackPane.alignment="CENTER">
-
-      </GridPane>
-                   <GridPane fx:id="opcionesGrid" alignment="CENTER_LEFT" prefHeight="762.0" prefWidth="800.0" StackPane.alignment="CENTER">
-
-       </GridPane>
-                   <GridPane fx:id="enemigosGrid" alignment="CENTER_LEFT" prefHeight="762.0" prefWidth="800.0" StackPane.alignment="CENTER">
-
-                   </GridPane>
-               </children>
             </StackPane>
          </children>
       </AnchorPane>
