--- a/src/main/resources/fxml/inicio.fxml
+++ b/src/main/resources/fxml/inicio.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,38 +7,38 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
+<AnchorPane prefHeight="768.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
             <children>
                <StackPane fx:id="stackPane" prefHeight="768.0" prefWidth="1152.0">
                   <children>
                      <ImageView fitHeight="768.0" fitWidth="1152.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                           <Image url="@../images/background.jpg" />
+                           <Image url="@../images/Background.jpg" />
                         </image>
                      </ImageView>
                      <ImageView fitHeight="500.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3" translateX="-345.0" translateY="-109.0" StackPane.alignment="BOTTOM_LEFT">
                         <image>
-                           <Image url="@../images/castle.png" />
+                           <Image url="@../images/Castle.png" />
                         </image>
                      </ImageView>
                      <ImageView fitHeight="500.0" fitWidth="350.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true" scaleX="2.3" scaleY="2.3" translateX="80.0" StackPane.alignment="BOTTOM_RIGHT">
                         <image>
-                           <Image url="@../images/boar.png" />
+                           <Image url="@../images/Boar.png" />
                         </image>
                      </ImageView>
                      <ImageView fitHeight="160.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-80.0" translateY="-45.0">
                         <image>
-                           <Image url="@../images/castle.png" />
+                           <Image url="@../images/Castle.png" />
                         </image>
                      </ImageView>
                      <ImageView fitHeight="750.0" fitWidth="700.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="BOTTOM_LEFT">
                         <image>
-                           <Image url="@../images/king.png" />
+                           <Image url="@../images/King.png" />
                         </image>
                      </ImageView>
                      <ImageView fitHeight="75.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="500.0" translateY="-80.0">
                         <image>
-                           <Image url="@../images/castle.png" />
+                           <Image url="@../images/Castle.png" />
                         </image>
                      </ImageView>
                      <Text fill="#5eb7fe" lineSpacing="1.0" stroke="#f3c457" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeMiterLimit="0.0" strokeType="OUTSIDE" strokeWidth="5.0" text="Algo Tower Defense" textAlignment="CENTER" translateY="-250.0">
@@ -49,7 +48,7 @@
                      </Text>
                      <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="175.0" translateY="97.0" StackPane.alignment="TOP_LEFT">
                         <image>
-                           <Image url="@../images/castle.png" />
+                           <Image url="@../images/Castle.png" />
                         </image>
                      </ImageView>
                   </children>
