Fix tamaño de tablero CAO

--- a/src/main/resources/fxml/juego.fxml
+++ b/src/main/resources/fxml/juego.fxml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.HBox?>
 
-<SplitPane fx:id="divide" dividerPositions="0.6934369602763385" prefHeight="762.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
-   <items>
-      <AnchorPane fx:id="mapa" prefHeight="762.0" prefWidth="800.0">
+<HBox fx:id="divide"  prefWidth="1152.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
+
+      <AnchorPane fx:id="mapa" prefWidth="750.0">
          <children>
-            <StackPane fx:id="stackPane" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="762.0" prefWidth="800.0">
+            <StackPane fx:id="stackPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="750.0">
             </StackPane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="datosJugador" prefHeight="762.0" prefWidth="352.0">
+      <AnchorPane fx:id="datosJugador" prefWidth="402.0">
          <children>
             <VBox fx:id="vBoxDatos" alignment="TOP_CENTER" prefHeight="572.0" prefWidth="352.0" style="-fx-padding: 10px; -fx-spacing: 10px;" />
-            <AnchorPane layoutY="553.0" prefHeight="209.0" prefWidth="352.0">
+            <AnchorPane layoutY="553.0" prefHeight="150.0" prefWidth="352.0">
                <children>
                    <Button fx:id="btnTerminarTurno" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="77.0" mnemonicParsing="false" prefHeight="107.0" prefWidth="332.0" style="-fx-background-radius: 10; -fx-background-color: rgb(255, 206, 91); -fx-padding: 0px 0px 0px 0px;">
                        <font>
@@ -29,5 +29,5 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-   </items>
-</SplitPane>
+
+</HBox>
