--- a/src/main/resources/fxml/grilla.fxml
+++ b/src/main/resources/fxml/grilla.fxml
@@ -3,5 +3,5 @@
 <?import javafx.scene.layout.GridPane?>
 
 
-<GridPane fx:id="gridPane" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="762.0" prefWidth="800" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="gridPane" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="750.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1">
 </GridPane>
