--- a/src/main/resources/fxml/inicio.fxml
+++ b/src/main/resources/fxml/inicio.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
+<AnchorPane prefHeight="762.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
             <children>
-               <StackPane fx:id="stackPane" prefHeight="768.0" prefWidth="1152.0">
+               <StackPane fx:id="stackPane" prefWidth="1152.0">
                   <children>
-                     <ImageView fitHeight="768.0" fitWidth="1152.0" pickOnBounds="true" preserveRatio="true">
+                     <ImageView  fitWidth="1152.0" pickOnBounds="true" preserveRatio="true">
                         <image>
                            <Image url="@../images/Background.jpg" />
                         </image>
