--- a/src/main/resources/fxml/juego.fxml
+++ b/src/main/resources/fxml/juego.fxml
@@ -18,14 +18,7 @@
       <AnchorPane fx:id="datosJugador" prefWidth="402.0">
          <children>
             <VBox fx:id="vBoxDatos" alignment="TOP_CENTER" prefHeight="572.0" prefWidth="352.0" style="-fx-padding: 10px; -fx-spacing: 10px;" />
-            <AnchorPane layoutY="553.0" prefHeight="150.0" prefWidth="352.0">
-               <children>
-                   <Button fx:id="btnTerminarTurno" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="77.0" mnemonicParsing="false" prefHeight="107.0" prefWidth="332.0" style="-fx-background-radius: 10; -fx-background-color: rgb(255, 206, 91); -fx-padding: 0px 0px 0px 0px;">
-                       <font>
-                           <Font name="System Bold" size="19.0" />
-                       </font>
-                   </Button>
-               </children>
+            <AnchorPane fx:id="botonera" layoutY="553.0" prefHeight="150.0" prefWidth="352.0">
             </AnchorPane>
          </children>
       </AnchorPane>
