--- a/src/main/resources/fxml/juego.fxml
+++ b/src/main/resources/fxml/juego.fxml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<HBox fx:id="divide"  prefWidth="1152.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
+<HBox fx:id="divide" prefWidth="1152.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
 
       <AnchorPane fx:id="mapa" prefWidth="750.0">
          <children>
@@ -20,6 +16,11 @@
             <VBox fx:id="vBoxDatos" alignment="TOP_CENTER" prefHeight="572.0" prefWidth="352.0" style="-fx-padding: 10px; -fx-spacing: 10px;" />
             <AnchorPane fx:id="botonera" layoutY="553.0" prefHeight="150.0" prefWidth="352.0">
             </AnchorPane>
+             <ImageView fitHeight="40.0" fitWidth="200.0" layoutX="355.0" layoutY="10.0" onMouseClicked="#configuracion" pickOnBounds="true" preserveRatio="true">
+                 <image>
+                     <Image url="@../images/botonConfiguracionMadera.png" />
+                 </image>
+             </ImageView>
          </children>
       </AnchorPane>
 
