--- a/src/main/resources/fxml/configuracion.fxml
+++ b/src/main/resources/fxml/configuracion.fxml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="150.0" prefWidth="89.0" spacing="10.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControlDeConfiguracion">
+<VBox fx:id="opcionesConfiguracion" maxHeight="150.0" maxWidth="89.0" prefHeight="150.0" prefWidth="89.0" spacing="10.0" style="-fx-background-radius: 10; -fx-background-color: rgb(255, 206, 91); " xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button mnemonicParsing="false" onAction="#mostrarInformacion" prefHeight="25.0" prefWidth="89.0" text="Información" />
-      <HBox prefHeight="36.0" prefWidth="600.0">
+      <Button fx:id="masInformacion" mnemonicParsing="false" prefHeight="25.0" prefWidth="89.0" text="Información" />
+      <HBox prefHeight="36.0" prefWidth="89.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#anteriorCancion" text="⏮" />
-            <Button mnemonicParsing="false" onAction="#play" text="⏸▶" />
-            <Button mnemonicParsing="false" onAction="#skip" text="⏭" />
+            <Button fx:id="anterior" mnemonicParsing="false" text="⏮" />
+            <Button fx:id="play" mnemonicParsing="false" text="⏸▶" />
+            <Button fx:id="siguiente" mnemonicParsing="false" text="⏭" />
          </children>
       </HBox>
-      <Slider showTickMarks="true" />
-      <Slider showTickMarks="true" />
+      <Slider maxWidth="89.0" prefHeight="36.0" prefWidth="89.0" showTickMarks="true" />
+      <Slider maxWidth="89.0" prefHeight="36.0" prefWidth="89.0" showTickMarks="true" />
    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </VBox>
