--- a/src/main/resources/fxml/inicio.fxml
+++ b/src/main/resources/fxml/inicio.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="762.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
+<AnchorPane prefHeight="762.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
             <children>
                <StackPane fx:id="stackPane" prefWidth="1152.0">
                   <children>
@@ -48,11 +51,11 @@
                            <Image url="@../images/Castle.png" />
                         </image>
                      </ImageView>
-                     <ImageView fitHeight="40.0" fitWidth="200.0" onMouseClicked="#configuracion" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                           <Image url="@../images/botonConfiguracionMadera.png" />
-                        </image>
-                     </ImageView>
+            <ImageView fx:id="configuracion" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" translateX="540.0" translateY="-340.0">
+               <image>
+                  <Image url="@../images/botonConfiguracionMadera.png" />
+               </image>
+            </ImageView>
                   </children>
                </StackPane>
             </children>
