--- a/src/main/resources/fxml/configuracion.fxml
+++ b/src/main/resources/fxml/configuracion.fxml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox fx:id="opcionesConfiguracion" maxHeight="150.0" maxWidth="89.0" prefHeight="150.0" prefWidth="89.0" spacing="10.0" style="-fx-background-radius: 10; -fx-background-color: rgb(255, 206, 91); " xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="opcionesConfiguracion" maxHeight="150.0" maxWidth="116.0" prefHeight="150.0" prefWidth="111.0" spacing="10.0" style="-fx-background-radius: 10; -fx-background-color: rgb(255, 206, 91); " xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="masInformacion" mnemonicParsing="false" prefHeight="25.0" prefWidth="89.0" text="Información" />
-      <HBox prefHeight="36.0" prefWidth="89.0">
+      <Button fx:id="masInformacion" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" text="Información" />
+      <HBox prefHeight="36.0" prefWidth="603.0">
          <children>
-            <Button fx:id="anterior" mnemonicParsing="false" text="⏮" />
-            <Button fx:id="play" mnemonicParsing="false" text="⏸▶" />
-            <Button fx:id="siguiente" mnemonicParsing="false" text="⏭" />
+            <Button fx:id="anterior" mnemonicParsing="false" prefHeight="25.0" prefWidth="28.0" text="⏮" />
+            <Button fx:id="play" mnemonicParsing="false" prefHeight="25.0" prefWidth="34.0" text="⏸▶" />
+            <Button fx:id="siguiente" mnemonicParsing="false" prefHeight="25.0" prefWidth="28.0" text="⏭" />
          </children>
       </HBox>
-      <Slider maxWidth="89.0" prefHeight="36.0" prefWidth="89.0" showTickMarks="true" />
-      <Slider maxWidth="89.0" prefHeight="36.0" prefWidth="89.0" showTickMarks="true" />
+      <Slider fx:id="volumenMusica" max="1.0" maxWidth="90.0" prefHeight="25.0" prefWidth="90.0" showTickMarks="true" />
+      <Slider fx:id="volumenEfectos" max="1.0" maxWidth="90.0" prefHeight="36.0" prefWidth="90.0" showTickMarks="true" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
