Se pusieron en pantalla completa inicio y juego

--- a/src/main/resources/fxml/juego.fxml
+++ b/src/main/resources/fxml/juego.fxml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<HBox fx:id="divide" prefWidth="1152.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
+<HBox fx:id="divide" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorDeJuego">
 
-      <AnchorPane fx:id="mapa" prefWidth="750.0">
+      <AnchorPane fx:id="mapa" maxWidth="1024.0" prefWidth="1024.0">
          <children>
-            <StackPane fx:id="stackPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="750.0">
+            <StackPane fx:id="stackPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="1024.0">
             </StackPane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="datosJugador" prefWidth="402.0">
+      <AnchorPane fx:id="datosJugador" prefHeight="1080.0" prefWidth="920.0">
          <children>
             <VBox fx:id="vBoxDatos" alignment="TOP_CENTER" prefHeight="572.0" prefWidth="352.0" style="-fx-padding: 10px; -fx-spacing: 10px;" />
             <AnchorPane fx:id="botonera" layoutY="553.0" prefHeight="150.0" prefWidth="352.0">
             </AnchorPane>
-             <ImageView fx:id="configuracion" fitHeight="40.0" fitWidth="200.0" layoutX="355.0" layoutY="10.0" onMouseClicked="#configuracion" pickOnBounds="true" preserveRatio="true">
+             <ImageView fx:id="configuracion" fitHeight="40.0" fitWidth="200.0" layoutX="415.0" layoutY="10.0" onMouseClicked="#configuracion" pickOnBounds="true" preserveRatio="true" translateX="435.0">
                  <image>
                      <Image url="@../images/botonConfiguracionMadera.png" />
                  </image>
