--- a/src/main/resources/fxml/inicio.fxml
+++ b/src/main/resources/fxml/inicio.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -7,51 +8,24 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="762.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
+<AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
             <children>
                <StackPane fx:id="stackPane" prefWidth="1152.0">
                   <children>
-                     <ImageView fitWidth="1152.0" pickOnBounds="true" preserveRatio="true">
+                     <ImageView cache="true" cacheHint="QUALITY" fitWidth="1920.0" pickOnBounds="true" preserveRatio="true">
                         <image>
                            <Image url="@../images/Background.jpg" />
                         </image>
-                     </ImageView>
-                     <ImageView fitHeight="500.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" scaleX="1.3" scaleY="1.3" translateX="-345.0" translateY="-109.0" StackPane.alignment="BOTTOM_LEFT">
-                        <image>
-                           <Image url="@../images/Castle.png" />
-                        </image>
-                     </ImageView>
-                     <ImageView fitHeight="500.0" fitWidth="350.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true" scaleX="2.3" scaleY="2.3" translateX="80.0" StackPane.alignment="BOTTOM_RIGHT">
-                        <image>
-                           <Image url="@../images/Boar.png" />
-                        </image>
-                     </ImageView>
-                     <ImageView fitHeight="160.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-80.0" translateY="-45.0">
-                        <image>
-                           <Image url="@../images/Castle.png" />
-                        </image>
-                     </ImageView>
-                     <ImageView fitHeight="750.0" fitWidth="700.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="BOTTOM_LEFT">
-                        <image>
-                           <Image url="@../images/King.png" />
-                        </image>
-                     </ImageView>
-                     <ImageView fitHeight="75.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="500.0" translateY="-80.0">
-                        <image>
-                           <Image url="@../images/Castle.png" />
-                        </image>
+               <effect>
+                  <ColorAdjust brightness="0.21" hue="0.02" />
+               </effect>
                      </ImageView>
                      <Text fill="#5eb7fe" lineSpacing="1.0" stroke="#f3c457" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeMiterLimit="0.0" strokeType="OUTSIDE" strokeWidth="5.0" text="Algo Tower Defense" textAlignment="CENTER" translateY="-250.0">
                         <font>
                            <Font name="Tw Cen MT Condensed" size="110.0" />
                         </font>
                      </Text>
-                     <ImageView fitHeight="40.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="175.0" translateY="97.0" StackPane.alignment="TOP_LEFT">
-                        <image>
-                           <Image url="@../images/Castle.png" />
-                        </image>
-                     </ImageView>
-            <ImageView fx:id="configuracion" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" translateX="540.0" translateY="-340.0">
+            <ImageView fx:id="configuracion" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" translateX="920.0" translateY="-500.0">
                <image>
                   <Image url="@../images/botonConfiguracionMadera.png" />
                </image>
