--- a/src/main/resources/fxml/inicio.fxml
+++ b/src/main/resources/fxml/inicio.fxml
@@ -8,29 +8,25 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
-            <children>
-               <StackPane fx:id="stackPane" prefWidth="1152.0">
-                  <children>
-                     <ImageView cache="true" cacheHint="QUALITY" fitWidth="1920.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                           <Image url="@../images/Background.jpg" />
-                        </image>
-               <effect>
-                  <ColorAdjust brightness="0.21" hue="0.02" />
-               </effect>
-                     </ImageView>
-                     <Text fill="#5eb7fe" lineSpacing="1.0" stroke="#f3c457" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeMiterLimit="0.0" strokeType="OUTSIDE" strokeWidth="5.0" text="Algo Tower Defense" textAlignment="CENTER" translateY="-250.0">
-                        <font>
-                           <Font name="Tw Cen MT Condensed" size="110.0" />
-                        </font>
-                     </Text>
-            <ImageView fx:id="configuracion" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" translateX="920.0" translateY="-500.0">
-               <image>
-                  <Image url="@../images/botonConfiguracionMadera.png" />
-               </image>
-            </ImageView>
-                  </children>
-               </StackPane>
-            </children>
+<AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="edu.fiuba.algo3.controllers.ControladorPantallaInicio">
+    <StackPane fx:id="stackPane" prefWidth="1152.0">
+        <ImageView cache="true" cacheHint="QUALITY" fitWidth="1920.0" pickOnBounds="true" preserveRatio="true">
+            <effect>
+                <ColorAdjust brightness="0.21" hue="0.02"/>
+            </effect>
+            <Image url="@../images/Background.jpg"/>
+        </ImageView>
+        <Text fill="#5eb7fe" lineSpacing="1.0" stroke="#f3c457" strokeLineCap="ROUND" strokeLineJoin="ROUND"
+              strokeMiterLimit="0.0" strokeType="OUTSIDE" strokeWidth="5.0" text="Algo Tower Defense"
+              textAlignment="CENTER" translateY="-250.0">
+            <font>
+                <Font name="Tw Cen MT Condensed" size="110.0"/>
+            </font>
+        </Text>
+        <ImageView fx:id="configuracion" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true"
+                   translateX="920.0" translateY="-500.0">
+            <Image url="@../images/botonConfiguracionMadera.png"/>
+        </ImageView>
+    </StackPane>
 </AnchorPane>
