--- a/src/main/resources/fxml/mensaje.fxml
+++ b/src/main/resources/fxml/mensaje.fxml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="mensajeBox" alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="450.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <Label fx:id="mensaje" maxWidth="400.0" prefHeight="120.0" translateX="30.0" translateY="10.0">
-            <font>
-                <Font name="System Bold" size="25.0" />
-            </font></Label>
-    </children>
+<HBox fx:id="mensajeBox" alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="600.0" xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml/1">
+    <Label fx:id="mensaje" prefWidth="600.0" prefHeight="120.0" translateX="30.0" translateY="10.0">
+        <font>
+            <Font name="System Bold" size="25.0"/>
+        </font>
+    </Label>
 </HBox>
 
